style.css
html{
	position: relative;
	min-height: 100%;
}

body{
	font-family: 'Montserrat', sans-serif;
}

.static-bg{  
	background-image: url('media/bgpic.png');
	background-repeat: no-repeat;
	background-attachment: fixed;
	background-size: 100% 100%;
}

.nav{
	color: black;
	text-decoration: none;
	-webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
}

.nav:hover{
	text-decoration: underline;
}

.selected{
	text-decoration: underline;
}

.home-nav:hover{
	color: #a8a8a8;
	text-shadow: 2px 2px black;
}

.about-nav:hover{
	color: #ed58d2;
	text-shadow: 2px 2px black;
}

.about-nav.selected{
	color: #ed58d2;
	text-shadow: 2px 2px black;
}

.projects-nav:hover{
	color: #fffd6b;
	text-shadow: 2px 2px black;
}

.projects-nav.selected{
	color: #fffd6b;
	text-shadow: 2px 2px black;
}

.blog-nav:hover{
	color: #bafdff;
	text-shadow: 2px 2px black;
}

.blog-nav.selected{
	color: #bafdff;
	text-shadow: 2px 2px black;
}

.body-text{
	display: inline-flex;
	width: 100%;
	justify-content: center;
}

.socials{
	position: absolute;
	text-align: center;
	left: 50%;
	bottom: 1%;
	transform: translate(-50%,-50%);
	width: 100%;
}

.socials img{
	width: 3.5vh;
	height: 3.5vh;
	padding-left: 0.4%;
	padding-right: 0.4%;
	-webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
}

.socials img:hover{
	width: 5vh;
	height: 5vh;
}

canvas{
	position: fixed !important;
}

/*=====LANDING PAGE CSS=====*/

.landing{
	font-family: 'Montserrat', sans-serif;
	text-align: center;
	position: absolute;
	left: 50%;
	top: 50%;
	transform: translate(-50%,-50%);
}

.landing h1{
	transition: 0.5s;
	font-size: 7vh;
	line-height: 0.9;
}

.landing h1:hover .first-m{
	color: #ed58d2;
}

.landing h1:hover .first-v{
	color: #fffd6b;
}

.landing .first {
    -webkit-transition: all 0.3s ease;
    -moz-transition: all 0.3s ease;
    -o-transition: all 0.3s ease;
    transition: all 0.3s ease;
}

.landing p{
	font-size: 2vh;
}

.landing a{
	color: black;
	transition: 0.5s;
}

.landing .about-landing-link:hover{
	text-shadow: 0.1vh 0.05vh #ed58d2;
}

.landing .projects-landing-link:hover{
	text-shadow: 0.1vh 0.05vh #fffd6b;
}

.landing .blog-landing-link:hover{
	text-shadow: 0.1vh 0.05vh #bafdff;
}


/*=====ABOUT PAGE CSS=====*/
.about{
	width: 100%;
	font-family: 'Montserrat', sans-serif;
}

.par{
	font-size: 1.1em;
	margin-top: 5%;
	margin-bottom: 10%;
	padding: 2%;
	width: 55vmax;
	text-align: left;
	background-color: rgba(240,240,240,0.5);
	border-radius: 1%;
}

.par img{
	max-width: 20%;
	float: left;
	margin-right: 2%;
}

.jumbo{
	font-size: 1.3em;
	font-weight: bold;
}

.myname{
	-webkit-transition: all 0.3s ease;
    -moz-transition: all 0.3s ease;
    -o-transition: all 0.3s ease;
    transition: all 0.3s ease;
}

.myname:hover{
	color: #ed58d2;
}

.info{
	width: 100%;
	/*display: flex;
	justify-content: space-between;
	align-items: flex-start;*/
}

.info a{
	color: black;
	-webkit-transition: all 0.3s ease;
    -moz-transition: all 0.3s ease;
    -o-transition: all 0.3s ease;
    transition: all 0.3s ease;
}

.info a:hover{
	text-shadow: 0.1vh 0.05vh #fffd6b;
}

/*.info-text{
	width: 75%;
	float: right;
}*/

/*=====PROJECT PAGE CSS=====*/
.project-container{
	/*padding-top: 5%;*/
	width: 100%;
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	font-family: 'Montserrat', sans-serif;
}

.project{
	display: flex;
	flex-wrap: wrap;
	width: 13vmax;
	padding: 1vmax;
	margin: 1vmax;
	border-radius: 10px;
	cursor: pointer;
	-webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
    line-height: 0.5;
}

h1{
	text-align: center;
	font-size: 3vh;
}

.project p{
	font-style: italic;
	font-size: 1vh;
}

.project.purp{
	background-color: rgba(237, 88, 210, 0.5); 
}
.project.purp:hover{
	background-color: rgba(237, 88, 210, 0.9); 
}

.project.blu{
	background-color: rgba(41, 249, 255, 0.5); 
}
.project.blu:hover{
	background-color: rgba(41, 249, 255, 0.9); 
}

.project.yell{
	background-color: rgba(255, 251, 25, 0.5); 
}
.project.yell:hover{
	background-color: rgba(255, 251, 25, 0.9); 
}

.proj-img-container{
	float: center;
	margin-top: 5%;
	margin-left: auto;
	margin-right: auto;
	width: 12vmax;
	height: 7vmax;
	overflow: hidden;
}

.proj-img-container img{
	float: center;
	max-width: 100%;
}

.proj-text{
	margin-left: auto;
	margin-right: auto;
	width: 14vmax;
	line-height: 1;
}

.project-popup{
	position: fixed;
	top: 50%;
	left: 50%;
	transform: translate(-50%,-50%);
	z-index: -696969;
	background: rgba(245,245,245,0.95);
	width: 100%;
	height: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
	visibility: hidden;
	opacity: 0;
	-webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
}

.project-popup.active{
	z-index: 696969;
	visibility: visible;
	opacity: 1;
}

.close{
	position: fixed;
	top: 2%;
	right: 2%;
	-webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
    cursor: pointer;

}
.close:hover{
	text-shadow: 2px 2px #bafdff;
}

.popup-container{
	width: 70%;
	height: 50%;
}

.popup-container h1{
	width: 100%;
	text-align: left;
}

.popup-img{
	float: center;
	margin-top: -15%;
	margin-left: auto;
	margin-right: auto;
	width: 60%;
	overflow: hidden;
}

.popup-img img{
	float: center;
	max-width: 100%;
}

.popup-img.shrink{
	width: 40%;
}

.popup-container a{
	text-decoration: none;
	color: black;
	-webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;

}

.projlink:hover{
	text-shadow: 1px 1px #ed58d2;
}
.codelink:hover{
	text-shadow: 1px 1px #fffd6b;
}

